<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/add_book_view">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_title_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:id="@+id/book_add_title" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <requestFocus/>
    </EditText>
    <EditText
            android:hint="@string/add_author_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:id="@+id/book_add_author" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/book_add_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:hint="@string/add_price_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:id="@+id/book_add_price" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/book_add_author" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:hint="@string/add_cover_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:imeOptions="actionDone"
            android:id="@+id/book_add_cover_url" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/book_add_price"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/book_add_cover_preview"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/book_add_upload"
            app:layout_constraintTop_toBottomOf="@+id/book_add_cover_url"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_add_upload" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>